fixed jump when going from banner to about page

--- a/app/assets/stylesheets/pages/_about.scss
+++ b/app/assets/stylesheets/pages/_about.scss
@@ -1,19 +1,29 @@
 
+.about-all
+{
+ display:flex;
+}
 .about-sidenav {
     height: 100vh;
-    width: 15vw;
+    width: 30vw;
     z-index: 1;
     left: 0;
     background-color: #CEDBD1;
     box-shadow: 0px 2px 10px rgba(0,0,0,0.2);
     overflow-x: hidden;
-    top: 92vh;
+   // top: 92vh;
 }
 
 
 .sticky {
     position: fixed;
     top: 71px !important;
+    width: 15vw;
+}
+
+.main-sticky
+{
+    margin-left: 15vw;/* Same as the width of the sidenav */
 }
 
 
@@ -23,9 +33,9 @@
     text-decoration: none;
     font-size: 1.4em;
     color: black;
-    display: block;
     font-weight: bold;
     opacity: 0.8;
+    display:block;
 }
 
 .about-sidenav a:hover {
@@ -38,7 +48,7 @@
 }
 
 .about-main {
-    margin-left: 15vw;/* Same as the width of the sidenav */
+    // margin-left: 15vw;/* Same as the width of the sidenav */
     font-size: 1em; /* Increased text to enable scrolling */
     padding: 20px;
     padding-top-top: 20px;
